Fixes full-bleed issue.

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
 
 .founders {
   /* text-align: center; */
+  background: url(assets/founders.jpg) no-repeat;
   /* display: block;
   margin-left: auto;
   margin-right: auto;
